--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@directus/sdk": "^21.0.0",
-    "@nuxt/eslint": "1.12.1",
     "@nuxt/fonts": "0.12.1",
     "@nuxt/icon": "2.2.0",
     "@pinia/nuxt": "0.11.3",
@@ -19,7 +18,6 @@
     "@vueuse/core": "^14.1.0",
     "daisyui": "^5.5.14",
     "directus": "^11.14.1",
-    "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
     "nuxt-directus": "5.7.0",
     "pinia": "^3.0.4",
@@ -29,9 +27,12 @@
   },
   "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912",
   "devDependencies": {
+    "@nuxt/eslint": "1.12.1",
     "@tailwindcss/typography": "^0.5.19",
     "@unhead/vue": "1.11.20",
-    "esbuild": "0.19.12"
+    "esbuild": "0.19.12",
+    "eslint": "^9.39.2",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "overrides": {
